removed surefire plugin