@@ -22,17 +22,6 @@
 	</properties>
 	<build>
   	<plugins>
-
-		<plugin>
-		  <groupId>org.apache.maven.plugins</groupId>
-		  <artifactId>maven-surefire-plugin</artifactId>
-		  <version>2.21.0</version>
-		  <configuration>
-			<forkCount>3</forkCount>
-			<reuseForks>true</reuseForks>
-			<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-		  </configuration>
-		</plugin>
 		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-checkstyle-plugin</artifactId>
